crates/model/tests/compile_fail/rg_declaration_bad_alias.rs
// Resource group declaration alias must match an event.
#[derive(quent_model::Attributes, serde::Serialize, serde::Deserialize)]
pub struct MyEvent {}

quent_model::entity! {
    Bad: ResourceGroup {
        events: {
            a: MyEvent,
        },
        declaration: nonexistent,
    }
}

fn main() {}
