crates/model/tests/compile_fail/rg_declaration_bad_alias.stderr
error: declaration alias `nonexistent` does not match any event
  --> tests/compile_fail/rg_declaration_bad_alias.rs:10:22
   |
10 |         declaration: nonexistent,
   |                      ^^^^^^^^^^^
